@@ -2,3 +2,4 @@
 - hdporn92 - fix listing, playback
 - fulltaboo - fix listing, thumbnails
 - watcherotic - fix lookupinfo
+- fullporner - fix listing
